docs/7.52/md/abenoperands_names.md
---
title: "Names for Individual Operands"
description: |
  An individual operand, meaning an operand that is not an expression, can be elementary or made up of components. Composite operands are: -   Structured data types or data objects (structure) -   Instances of classes (objects) -   Classes -   Interfaces Accordingly, names for operands are either elem
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenoperands_names.htm"
abapFile: "abenoperands_names.htm"
keywords: ["select", "do", "try", "class", "data", "types", "abenoperands", "names"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [ABAP Syntax](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_syntax.htm) →  [ABAP Statements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_statements.htm) →  [Operands](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenoperands.htm) → 

Names for Individual Operands

An individual operand, meaning an operand that is not an expression, can be elementary or made up of components. Composite operands are:

-   Structured data types or data objects (structure)

-   Instances of classes (objects)

-   Classes

-   Interfaces

Accordingly, names for operands are either elementary names or names constructed from multiple names separated by component selectors. An elementary name is used for addressing:

-   elementary operands

-   components that are unique in the current context

-   superunits made up of components

[Naming conventions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennaming_conventions.htm) apply to the elementary names. Composite names with component selectors are used for addressing individual components. A component can itself be a superunit of further components. Subcomponents can be addressed by [chaining](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenchaining_glosry.htm "Glossary Entry") multiple names.

-   [Structure Component Selector](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstructure_component_selector.htm)

-   [Object Component Selector](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenobject_component_selector.htm)

-   [Class Component Selector](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenclass_component_selector.htm)

-   [Interface Component Selector](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninterface_component_selector.htm)

-   [Chainings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencomponent_chaining_selector.htm)

Note

As well as the component selectors listed here, [Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopen_sql_glosry.htm "Glossary Entry") has a [column selector](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_comp_selector_glosry.htm "Glossary Entry") (~).

Continue
[Structure Component Selector](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstructure_component_selector.htm)
[Object Component Selector](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenobject_component_selector.htm)
[Class Component Selector](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenclass_component_selector.htm)
[Interface Component Selector](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninterface_component_selector.htm)
[Chainings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencomponent_chaining_selector.htm)